cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME homework)
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(task_01)
add_subdirectory(task_02)
add_subdirectory(task_03)
add_subdirectory(task_04)
add_subdirectory(task_05)
add_subdirectory(task_06)
add_subdirectory(task_07)
add_subdirectory(task_08)
